// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VApp.js should allow a custom id 1`] = `

<div class="application--wrap">
  <div data-app="true"
       class="application application--light"
       id="inspire"
  >
  </div>
</div>

`;

exports[`VApp.js should match a snapshot 1`] = `

<div class="application--wrap">
  <div data-app="true"
       class="application application--light"
       id="app"
  >
  </div>
</div>

`;
